fix tagline wrapping
* Add clearfix style to wrap floated elements
* Fix tagline from wrapping too early

	modified:   css/coge.css
	modified:   tmpl/header.tmpl

--- a/web/css/coge.css
+++ b/web/css/coge.css
@@ -1418,3 +1418,10 @@ header {
     top: 45%;
     left: 40%;
 }
+
+.clearfix:before,
+.clearfix:after {
+    content: " ";
+    display: table;
+    clear:both;
+}
